--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Clase de configuracion del proyecto:
 
+#Nombre identificador del servicio para Eureka
+spring.application.name=eureka-server
+#Puerto del servicio donde se despliega y expone
+server.port=8761
+
+#Eureka puede ser servidor y cliente a la ves, 
+#Para que no sea Cliente:
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
