Config dinámica de URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@
 
 #Nombre identificador del servicio para Eureka
 spring.application.name=eureka-server
+#Host donde se despliega
+#eureka.instance.hostname=localhost
 #Puerto del servicio donde se despliega y expone
 server.port=8761
-
 #Eureka puede ser servidor y cliente a la ves, 
 #Para que no sea Cliente:
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+#URL
+#eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
